# wlj-study

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  c++.md  cmake_install.cmake  hw  hw1  tixing.cpp
ODE-equation/: adams.py  yEuler.py
ODE-equation/ODE-Euler/: Languange.m  hmeuler.m  m4adams.m  m4rkutta.m  meuler.m  qmeuler.m  test.m  textl3.m
doc/: C++学习.ipynb  Delaunay mesh generation.ipynb  N-S 注释.ipynb  N-S方程.ipynb  N-S方程.md  ODE-test.ipynb  Python study.ipynb  Python 知识点.ipynb  Python_study.ipynb  SUMMARY.md  Style code for Python.ipynb  Untitled.ipynb  VEM 基础理论- 2d.md  WG and VEM 的论文.ipynb  create table.ipynb  normal_pdf.ipynb  python-study.md  python11-22.ipynb  vim_way.md  插值法.ipynb  最优化理论知识.ipynb  梯度优化算法.docx  用Lagrange 方法求未知点.docx  讨论课笔记.ipynb
doc/Untitled Folder/: h(div) 拓展知识点.ipynb
doc/_book/: 10-2.html  10-2.md  N-S方程.html  Python study.ipynb  Style code for Python.ipynb  VEM 基础理论- 2d.html  WG 和VEM关于椭圆方程的等价性-陈龙.ipynb  index.html  python-study.html  search_index.json  vem2d.html  vim_way.html  vim_way.md  writing_standard.html  用Lagrange 方法求未知点.ipynb
include/: CMakeLists.txt  Makefile  cmake_install.cmake
matlab-study/: 1.m  main_test.m
matlab-study/1/: FD1d_bvp.m  FD1d_bvp_test.m  FD1d_error.m  f.m  u.m
matlab-study/2/: heat_equation_fd1d.m  main_test.m  model_data.m  showsolution.m  showvarysolution.m
matlab-study/雅可比/: jacobi.m  yakebi.m  yakebi_test.m
python-example/: 1finit1.py  ScaleConverter.py  assembling.py  basic_example.py  chazhi.py  cheby.py  cheby2.py  classd.py  demo.py  demo2.py  diedai.py  double.py  fb.py  file.mat  foundpath.py  game.py  hello_tk.py  integrate.py  integrate2.py  linalg.py  lines.py  makelist.py  mydata.csv  nihe1216.py  nihe2.py  nlfunc.py  not callable  nu.py  ode1.py  ode2.py  ode3.py  ployCH.py  plt.py  plt1.py  polyCH.py  prime.py  speed.py  sum1.py  tem_conv.py  temp_tk.py  (+8 more)
python-example/1/: FD1d_bvp1.py  FD1d_error1.py  test.py
python-example/1/anli1/: FD1_bvp.py  FD1_error.py  (+1 more)
python-example/Newton/: Cmodel.py  Poissonvem.py  model.py  mulNewton.py
python-example/matplotlib/: align_ylabels.py  annotate_transform.py
src/: Makefile  cmake_install.cmake
test/: '  1.cpp  2  2.cpp  3  3.cpp  4.cpp  5  5.cpp  6.cpp  7.cpp  7t  7t.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  arctan.cpp  array1  array1.cpp  asterist.cpp  ball.py  circle.cpp  cmake_install.cmake  daoshu.cpp  dis.cpp  dowhile  dowhile.cpp  factorial  factorial.cpp  feibo.cpp  formore  formore.cpp  fun.cpp  gcd.cpp  huitu.py  if1.cpp  if2  if2.cpp  jiec.cpp  jiecheng.cpp  (+21 more)
test/ODE-equation/: ODE-equation.ipynb  iEuler.py  line.py  runge-kutta.py  xEuler.py  yEuler.py
test/include/: Makefile
test/python-example/: loop.py  mathsinh.py  normal_pdf.py
test/src/: Makefile
test/test/: 4  6  7  CGAL_test  Makefile  arctan  asterist  circle  cmake_install.cmake  daoshu  dis  feibo  feipo2  fun  gcd  if1  jiecheng  min  pi1  pingf2  pingf3  rank  rank1  side  sqr1  sum1  trigon  xing  zhongzhihs
(+10 files in other folders)
