if(HAVE_CGAL)
    add_executable(CGAL_test CGAL_test.cpp)
    target_link_libraries(CGAL_test  ${CGAL_LIBRARIES})
endif()

add_executable(max max.cpp)  
add_executable(sqr sqr.cpp)  
add_executable(tixing tixing.cpp) 
add_executable(sum sum.cpp)
add_executable(factorial factorial.cpp)  
add_executable(ourfunc ourfunc.cpp)
add_executable(sum1 sum1.cpp)
add_executable(rank rank.cpp)
add_executable(rank1 rank1.cpp)
add_executable(circle circle.cpp)
add_executable(fun fun.cpp)
add_executable(sqr1 sqr1.cpp)
add_executable(trigon trigon.cpp)
add_executable(if1 if1.cpp)
add_executable(if2 if2.cpp)
add_executable(arctan arctan.cpp)
add_executable(gcd gcd.cpp)
add_executable(array1 array1.cpp)
add_executable(xing xing.cpp)
add_executable(asterist asterist.cpp)
add_executable(formore formore.cpp)
add_executable(pi1 pi1.cpp)
