if(HAVE_CGAL)
    add_executable(CGAL_test CGAL_test.cpp)
    target_link_libraries(CGAL_test  ${CGAL_LIBRARIES})
endif()

add_executable(max max.cpp)  
add_executable(sqr sqr.cpp)  
add_executable(tixing tixing.cpp) 
add_executable(sum sum.cpp)
add_executable(factorial factorial.cpp)  
add_executable(ourfunc ourfunc.cpp)
add_executable(sum1 sum1.cpp)
add_executable(rank rank.cpp)
add_executable(rank1 rank1.cpp)
add_executable(circle circle.cpp)
add_executable(fun fun.cpp)
add_executable(sqr1 sqr1.cpp)
add_executable(trigon trigon.cpp)
add_executable(if1 if1.cpp)
add_executable(if2 if2.cpp)
add_executable(arctan arctan.cpp)
add_executable(gcd gcd.cpp)
add_executable(array1 array1.cpp)
add_executable(xing xing.cpp)
add_executable(asterist asterist.cpp)
add_executable(formore formore.cpp)
add_executable(pi1 pi1.cpp)
add_executable(side side.cpp)
add_executable(dowhile dowhile.cpp)
add_executable(dis dis.cpp)
add_executable(2 2.cpp)
add_executable(3 3.cpp)
add_executable(daoshu daoshu.cpp)
add_executable(jiecheng jiecheng.cpp)
add_executable(pingf pingf.cpp)
add_executable(pingf2 pingf2.cpp)
add_executable(pingf3 pingf3.cpp)
add_executable(feibo feibo.cpp)
add_executable(4 4.cpp)
add_executable(5 5.cpp)
add_executable(6 6.cpp)
add_executable(zhongzhihs zhongzhihs.cpp)
add_executable(7 7.cpp)
add_executable(7t 7t.cpp)
add_executable(xianyuanfa xianyuanfa.cpp)
